# tech-radar-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_spider.yml
reports/: 2026-02-20-Daily-Radar.md  2026-02-21-Daily-Radar.md  2026-02-22-Daily-Radar.md  2026-02-23-Daily-Radar.md  2026-02-24-Daily-Radar.md  2026-02-25-Daily-Radar.md  2026-02-26-Daily-Radar.md  2026-02-27-Daily-Radar.md  2026-02-28-Daily-Radar.md  2026-03-01-Daily-Radar.md  2026-03-02-Daily-Radar.md  2026-03-03-Daily-Radar.md  2026-03-04-Daily-Radar.md  2026-03-05-Daily-Radar.md  2026-03-06-Daily-Radar.md  2026-03-07-Daily-Radar.md  2026-03-08-Daily-Radar.md  2026-03-09-Daily-Radar.md  2026-03-10-Daily-Radar.md  2026-03-11-Daily-Radar.md  2026-03-12-Daily-Radar.md  2026-03-13-Daily-Radar.md  2026-03-14-Daily-Radar.md  2026-03-15-Daily-Radar.md  2026-03-16-Daily-Radar.md  2026-03-17-Daily-Radar.md  2026-03-18-Daily-Radar.md  2026-03-19-Daily-Radar.md  2026-03-20-Daily-Radar.md  2026-03-21-Daily-Radar.md  2026-03-22-Daily-Radar.md  2026-03-23-Daily-Radar.md  2026-03-24-Daily-Radar.md  2026-03-25-Daily-Radar.md  2026-03-26-Daily-Radar.md  2026-03-27-Daily-Radar.md  2026-03-28-Daily-Radar.md  2026-03-29-Daily-Radar.md  2026-03-30-Daily-Radar.md  2026-03-31-Daily-Radar.md  (+93 more)
src/: __init__.py  dotnet_scraper.py  github_scraper.py  llm_summarizer.py  main.py
